@@ -1,3 +1,8 @@
+2006-10-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* parse_telex.pl (End_handler), parse_etlex.pl (End_handler):
+	Fix typo 'anonym' -> 'antonym'.
+
 2006-10-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* configure.in: Remove unneeded AC_PROG_CC.
